[gd_scene load_steps=8 format=3 uid="uid://c7uwetgvv5avf"]

[ext_resource type="Script" uid="uid://c8jtw7116kwaa" path="res://Components/Desk/GrabItem/Global/item.gd" id="1_0r1iu"]
[ext_resource type="Texture2D" uid="uid://bepih42ikem3y" path="res://Assets/Images/clock.png" id="2_62awn"]
[ext_resource type="Script" uid="uid://uqf7035hmm55" path="res://Components/Desk/GrabItem/Clock/clock_visor.gd" id="4_8s1b3"]
[ext_resource type="PackedScene" uid="uid://b062bbp746e1f" path="res://Components/Desk/GrabItem/Global/Grab.tscn" id="5_gj54c"]
[ext_resource type="AudioStream" uid="uid://ckor7j3sb2e00" path="res://Assets/Audio/itemLand.wav" id="5_hj3bl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8w355"]
size = Vector2(125, 136.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5dpbu"]
size = Vector2(125, 57)

[node name="Clock" type="CharacterBody2D" node_paths=PackedStringArray("grabable")]
script = ExtResource("1_0r1iu")
grabable = NodePath("Sprite2D/GrabbableItem")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(6, 6)
texture = ExtResource("2_62awn")

[node name="GrabbableItem" parent="Sprite2D" node_paths=PackedStringArray("parentObj") instance=ExtResource("5_gj54c")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
parentObj = NodePath("../..")

[node name="ClockVisor" type="Node2D" parent="."]
script = ExtResource("4_8s1b3")

[node name="HourMarker" type="Marker2D" parent="ClockVisor"]
position = Vector2(3, -15)

[node name="ColorRect" type="ColorRect" parent="ClockVisor/HourMarker"]
offset_left = -3.0
offset_top = -20.0
offset_right = 3.0
offset_bottom = 3.0
color = Color(0, 0, 0, 1)

[node name="MinuteMarker" type="Marker2D" parent="ClockVisor"]
position = Vector2(3, -15)

[node name="ColorRect" type="ColorRect" parent="ClockVisor/MinuteMarker"]
offset_left = -2.0
offset_top = -26.0
offset_right = 2.0
offset_bottom = 3.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1.4999998, 13.124994)
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_8w355")
debug_color = Color(0.6668886, 0.5083992, 0.15268034, 0.41960785)

[node name="TableIdentify" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TableIdentify"]
position = Vector2(1.5, -26.5)
shape = SubResource("RectangleShape2D_5dpbu")

[node name="ItemLand" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hj3bl")

[connection signal="area_entered" from="TableIdentify" to="." method="_on_table_identify_area_entered"]
[connection signal="area_exited" from="TableIdentify" to="." method="_on_table_identify_area_exited"]
